--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,11 @@ abstract: 'Load modules in a DWIM style'
 author:
   - 'Jos Boumans <kane[at]cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  Test::More: 0.94
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.8507, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,8 +17,7 @@ no_index:
   directory:
     - t
     - inc
-requires:
-  Test::More: 0
+requires: {}
 resources:
   repository: https://github.com/jib/module-load
-version: 0.24
+version: 0.26
